
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct sockaddr_in {int sin_port; int sin_addr; } ;
struct sockaddr {int dummy; } ;
typedef int socklen_t ;
typedef int sa ;


 int accept (int,struct sockaddr*,int*) ;
 int fail (char*) ;
 int fprintf (int ,char*,char*,int) ;
 char* inet_ntoa (int ) ;
 int ntohs (int ) ;
 int stderr ;

void
do_accept
    (int *accepted, int sock)
{
  struct sockaddr_in sa;
  socklen_t sl;
  int s;

  sl = sizeof(sa);
  s = accept(sock, (struct sockaddr *) &sa, &sl);
  if (s == -1)
    fail("do_accept:accept");
  fprintf(stderr, "accepted %s:%d\n",
   inet_ntoa(sa.sin_addr), ntohs(sa.sin_port));
  *accepted = s;
}
